After adding footer section

--- a/Sign_up.css
+++ b/Sign_up.css
@@ -76,7 +76,7 @@ hr{
     /* background-color:gray; */
     font-size: 3rem;
     border-radius: 50%;
-    color: #1c8adb;
+    color: #576bda;
     /* background-color:green; */
 
 }
