--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -17,10 +17,12 @@ body{
     list-style: none;;
 }
 .footer{
-    background-color: #122040;
+    background-color: #10155c;
     padding: 70px 0;
     border: 2px solid ;
-    /* border-radius:30px; */
+    margin: 0 0;
+    margin-bottom: 2%;
+    border-radius:30px;
 }
 .footer .container .row{
     display: flex;
