--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -17,7 +17,7 @@ body{
     list-style: none;;
 }
 .footer{
-    background-color: #10155c;
+    background-color: #000;
     padding: 70px 0;
     border: 2px solid ;
     margin: 0 0;
