--- a/CSS/pro_home.css
+++ b/CSS/pro_home.css
@@ -52,6 +52,7 @@ body{
     left: 0;
     top: 0;
     right: 0;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -264,7 +265,7 @@ section{
     display: flex;
     justify-content: center;
     /* background-color: #e9dadad5; */
-    background: url(/IMAGES/free2.jpg) no-repeat;
+    background: url(/IMAGES/free2.jpg)no-repeat ;
     background-position: center;
     background-size: cover;
     padding-top:12rem;
@@ -294,7 +295,7 @@ section{
 /* feature section styling */
 .heading{
     text-align: center;
-    padding:2rem 0;
+    padding:.87rem 0;
     padding-bottom: 3rem;
     font-size:3rem;
     color: var(--light-color);
